tests/compile/command_modules/raytracing.stderr
In file included from raytracing.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: tlas, image
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
raytracing.cpp:146:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRayTracing>, rcgp::NormalEntry<norm_entry{{1, &tlas, 0}, 1, {{0, 0}, {0, 0}}, &ref_name_storage._M_elems[0]}>, rcgp::NormalEntry<norm_entry{{1, &image, 0}, 1, {{0, 0}, {0, 0}}, &ref_name_storage._M_elems[0]}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRayTracing>>' requested here
  146 |                 | trace_rays(pipeline, sbt, 1024, 1024);
      |                 ^
1 error generated.
